<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="DefrostSections" Id="{e7c987c7-55d0-497b-9038-62f76f96a6cf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE DefrostSections :
(
	S0 := 0, S1, S2, S3, S4, S5, S6, S1_3, S2_4, S3_5, S4_6, S1_3_5, S2_4_6
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>