<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="SystemStates" Id="{1b787587-57f3-4b4a-96aa-8f86abf79337}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE SystemStates :
(
	None := 0, Start, Idle, OpenDampers, StartupHeatRecovery, Run, PostRun, FireHandling, FireHandlingExit, FireExhaust, FireSupply, Ventilate, FirePanel
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>