<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="DefrostStageParameters" Id="{47b00efb-bc15-4802-beb5-41372bee945e}">
    <Declaration><![CDATA[TYPE DefrostStageParameters :
STRUCT
	EN: BOOL := TRUE; // $(setup)
	PressureLimit: LREAL := 100; // $(setup)
	SupplyAir: LREAL := 1.0; // $(setup)
	ExtractAir: LREAL := 1.0; // $(setup)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>